--- a/templates/layouts/partials/navbar.html
+++ b/templates/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <ul>
     <li><a href="{% url 'create-category' %}">Categorias</a></li>
-    <li><a href="#">Home</a></li>
+    <li><a href="{% url 'create-article' %}">Home</a></li>
     <li><a href="#">Article</a></li>
 </ul>
 
