--- a/templates/layouts/partials/navbar.html
+++ b/templates/layouts/partials/navbar.html
@@ -1,6 +1,7 @@
 <ul>
-    <li><a href="{% url 'create-category' %}">Categorias</a></li>
-    <li><a href="{% url 'create-article' %}">Home</a></li>
-    <li><a href="#">Article</a></li>
+    <li><a href="{% url 'list-category' %}">Home</a></li>
+    <li><a href="{% url 'create-category' %}">Categorias crear</a></li>
+    <li><a href="{% url 'create-article' %}">Crear Articulo</a></li>
+    <li><a href="{% url 'list-article' %}">lista articulos</a></li>
 </ul>
 
