--- a/templates/category/edit.html
+++ b/templates/category/edit.html
@@ -5,9 +5,10 @@
 
 
 {% block content %}
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
             {{ category }}
         <input type="submit" value="Crear">
     </form>
 {% endblock content %}
+
