--- a/templates/category/list.html
+++ b/templates/category/list.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <div class="container">
+        <a class="btn btn-outline-info mt-4" href="{% url 'create-category' %}" role="button">Crear Nueva Categoria</a>
         <div class="row">
             {% for category in categories %}                
                 <div class="col py-3">
@@ -16,7 +17,18 @@
                             <p class="card-text">Some quick he bulk of the card's content.</p>
                         </div>
                         <div class="card-body">
-                            <a href="{% url 'list-cat-art' id=category.id %}" class="card-link">Ver Categoria</a>
+                            <div class="row">
+                                <div class="col">
+                                    <a href="{% url 'list-cat-art' id=category.id %}" class="card-link">Ver Categoria</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'edit-category' id=category.id %}" class="card-link">Editar Categoria</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'delete-category' id=category.id %}" class="card-link"
+                                    onclick="return(alert('Seguro desea eliminar {{ category.name }}?'))">Eliminar Categoria</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
