--- a/templates/article/category_article.html
+++ b/templates/article/category_article.html
@@ -6,13 +6,16 @@
 
 {% block content %}
     <div class="container">
-        <a class="btn btn-outline-info mt-4 boton-list" href="{% url 'create-article' %}" role="button">Crear Nuevo Articulo</a>
+        <h2 class="text-center text-light list-title">LISTA DE ARTÍCULOS</h2>
+        <a class="btn btn-outline-info mt-4 boton-list" href="{% url 'create-article' %}" role="button">
+            <i class="fa fa-plus-circle" style="font-size:20px;"></i>
+            Crear Nuevo Artículo</a>
         {% for article in articles %}
-        <div class="card mt-4 center text-light" style="width: 45rem;">
+        <div class="card my-4 center text-light" style="width: 45rem;">
             <div class="card-body">
                 <h3 class="card-title">{{ article.title }}</h3>
                 <p class="fecha">{{ article.pub_date }}</p>
-                <p class="card-text">{{ article.content }}</p>
+                <p class="card-text">{{ article.content|slice:":150" }}...</p>
                 <a href="#" class="btn btn-outline-info">Leer mas....</a>
                 </div>
             </div>
