--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="card text-left mt-5 center text-light" style="width: 30rem;">
         <div class="card-header text-center">
-            <h4>Crear Articulo</h4>
+            <h4>Crear Artículo</h4>
         </div>
         <div class="card-body">
             <form action="" method="post" enctype="multipart/form-data">
@@ -27,7 +27,9 @@
                         </div>
                     {% endfor %}
                 </div>
-                <button type="submit" class="btn btn-outline-success" style="width: 100%;">Crear</button>
+                <button type="submit" class="btn btn-outline-success" style="width: 100%;">
+                    <i class="fa fa-paper-plane" style="font-size:20px;"></i>
+                    CREAR</button>
             </form>
         </div>
     </div>
