--- a/templates/category/create.html
+++ b/templates/category/create.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="card text-left mt-5 center text-light" style="width: 30rem;">
             <div class="card-header text-center">
-                <h4>Crear Categoria</h4>
+                <h4>Crear Categoría</h4>
             </div>
             <div class="card-body">
                 <form action="" method="post" enctype="multipart/form-data">
@@ -18,7 +18,7 @@
                             <div class="col-sm-12">
                                 {{ cat.label_tag }}
                                 {{ cat }}
-                                {% if cat.errors %}
+                                {% if errors %}
                                     {% for error in cat.errors%}
                                         <p class="help-block text-danger">{{ error }}</p>
                                     {% endfor %}
@@ -27,7 +27,9 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <button type="submit" class="btn btn-outline-success" style="width: 100%;">Crear</button>
+                    <button type="submit" class="btn btn-outline-success" style="width: 100%;">
+                        <i class="fa fa-paper-plane" style="font-size:20px;"></i>
+                        CREAR</button>
                 </form>
             </div>
         </div>
