--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,11 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Personal Blog | {% block title %} {% endblock %} </title>
 </head>
 <body>
     {% include 'layouts/partials/navbar.html' %}
-    
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} mt-3 alert-dismissible fade show" role="alert" 
+                style="width: 40rem; margin: auto;">
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %} 
+                    style="list-style: none;">{{ message }}</li>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+
     {% block content %}
         
     {% endblock content %}
