--- a/templates/layouts/partials/navbar.html
+++ b/templates/layouts/partials/navbar.html
@@ -9,17 +9,13 @@
                 <a class="nav-link" href="{% url 'list-category' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'create-category' %}">Categorias crear</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'create-article' %}">Crear Articulo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'list-article' %}">lista articulos</a>
+                <a class="nav-link" href="{% url 'list-article' %}">lista Artículos</a>
             </li>
         </ul>
         <form class="d-flex">
-            <a class="btn btn-outline-success" type="submit">Configuraticion</a>
+            <a class="btn btn-outline-success" type="submit">
+                <i class="fa fa-gear" style="font-size:24px;"></i>
+                Configuraticion</a>
         </form>
     </div>
 </nav>
