--- a/templates/article/category_article.html
+++ b/templates/article/category_article.html
@@ -6,19 +6,40 @@
 
 {% block content %}
     <div class="container">
-        <h2 class="text-center text-light list-title">LISTA DE ARTÍCULOS</h2>
-        <a class="btn btn-outline-info mt-4 boton-list" href="{% url 'create-article' %}" role="button">
+        <h2 class="text-center text-light list-title mt-5">ARTÍCULOS</h2>
+        
+        {% if request.user.is_authenticated %}
+            <a class="btn btn-outline-info mt-4 boton-list" href="{% url 'create-article' %}" role="button">
             <i class="fa fa-plus-circle" style="font-size:20px;"></i>
             Crear Nuevo Artículo</a>
+        {% endif %}
+            
         {% for article in articles %}
         <div class="card my-4 center text-light" style="width: 45rem;">
             <div class="card-body">
                 <h3 class="card-title">{{ article.title }}</h3>
                 <p class="fecha">{{ article.pub_date }}</p>
                 <p class="card-text">{{ article.content|slice:":150" }}...</p>
-                <a href="#" class="btn btn-outline-info">Leer mas....</a>
+                <div class="row">
+                    <div class="col-10">
+                        <a href="{% url 'detail-article' article.id %}" class="btn btn-outline-info">Leer mas....</a>
+                    </div>
+                    
+                    {% if request.user.is_authenticated %}
+                        <div class="col-1">
+                            <a href="{% url 'edit-article' id=article.id %}" class="card-link" data-toggle="tooltip" data-placement="top" title="Editar ({{ article.title }})">
+                                <i class="fa fa-pencil-square-o" style="font-size:24px; color:#ac9305"></i>
+                            </a>
+                        </div>
+                        <div class="col-1">
+                            <a href="{% url 'delete-article' id=article.id %}" class="card-link" data-toggle="tooltip" data-placement="top" title="Eliminar ({{ article.title }})" onclick="return(alert('Seguro desea eliminar {{ article.title }}?'))">
+                                    <i class="fa fa-trash-o" style="font-size:24px; color:#bb0b0b"></i>
+                            </a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
+        </div>
         {% endfor %}
     </div>
 {% endblock content %}
