--- a/templates/category/list.html
+++ b/templates/category/list.html
@@ -6,10 +6,14 @@
 
 {% block content %}
     <div class="container">
-        <h2 class="text-center text-light list-title">LISTA DE CATEGORÍAS</h2>
-        <a class="btn btn-outline-info mt-4" href="{% url 'create-category' %}" role="button">
+        <h2 class="text-center text-light list-title mt-5">CATEGORÍAS</h2>
+        
+        {% if request.user.is_authenticated %}
+            <a class="btn btn-outline-info mt-4" href="{% url 'create-category' %}" role="button">
             <i class="fa fa-plus-circle" style="font-size:20px;"></i>
             Crear Nueva Categoría</a>
+        {% endif %}
+            
         <div class="row">
             {% for category in categories %}                
                 <div class="col py-3">
@@ -21,27 +25,50 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col text-center">
-                                    <a href="{% url 'list-cat-art' id=category.id %}" class="card-link">
-                                        <i class="fa fa-eye" style="font-size:24px; color:#000"></i>
-                                    </a>
-                                </div>
-                                <div class="col text-center">
-                                    <a href="{% url 'edit-category' id=category.id %}" class="card-link">
-                                        <i class="fa fa-pencil-square-o" style="font-size:24px; color:#000"></i>
-                                    </a>
-                                </div>
-                                <div class="col text-center ">
-                                    <a href="{% url 'delete-category' id=category.id %}" class="card-link"
-                                    onclick="return(alert('Seguro desea eliminar {{ category.name }}?'))">
-                                    <i class="fa fa-trash-o" style="font-size:24px; color:#000"></i>
-                                    </a>
-                                </div>
+                                
+                                {% if request.user.is_authenticated %}
+                                    <div class="col text-center">
+                                        <a href="{% url 'list-cat-art' id=category.id %}" class="card-link" data-toggle="tooltip" data-placement="top" title="Ver ({{ category.name }})">
+                                            <i class="fa fa-eye" style="font-size:24px; color:#000"></i>
+                                        </a>
+                                    </div>
+                                    <div class="col text-center">
+                                        <a href="{% url 'edit-category' id=category.id %}" class="card-link" data-toggle="tooltip" data-placement="top" title="Editar ({{ category.name }})">
+                                            <i class="fa fa-pencil-square-o" style="font-size:24px; color:#000"></i>
+                                        </a>
+                                    </div>
+                                    <div class="col text-center ">
+                                        <a href="{% url 'delete-category' id=category.id %}" class="card-link" data-toggle="tooltip" data-placement="top" title="Eliminar ({{ category.name }})"
+                                        onclick="return(alert('Seguro desea eliminar {{ category.name }}?'))">
+                                        <i class="fa fa-trash-o" style="font-size:24px; color:#000"></i>
+                                        </a>
+                                    </div>
+                                {% else %}
+                                    <div class="col text-center">
+                                        <a href="{% url 'list-cat-art' id=category.id %}" class="card-link">
+                                            Ver Categoría
+                                        </a>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
                 </div>
             {% endfor %}            
         </div>
+        <!-- <div>
+            {% if post_list.has_other_pages %}
+                <nav aria-label="Page navigation container"></nav>
+                    <ul class="pagination justify-content-center">
+                        {% if post_list.has_previous %}
+                            <li><a href="?page={{ post_list.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                        {% endif %}    
+                        {% if post_list.has_next %}
+                            <li><a href="?page={{ post_list.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            {% endif %}
+        </div> -->
     </div>
 {% endblock content %}
