--- a/templates/layouts/partials/navbar.html
+++ b/templates/layouts/partials/navbar.html
@@ -1,21 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'list-category' %}">Personal Blog</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Personal Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'list-category' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'list-article' %}">lista Artículos</a>
             </li>
         </ul>
         <form class="d-flex">
-            <a class="btn btn-outline-success" type="submit">
-                <i class="fa fa-gear" style="font-size:24px;"></i>
-                Configuraticion</a>
+            
+            {% if request.user.is_authenticated %}
+                <h6 class="text-light my-2 mr-2">BIENVENIDO {{ user.username | upper }}</h6>
+                <a class="btn btn-outline-success" type="submit" href="{% url 'exit' %}">Salir</a>
+            {% else %}
+                <a class="btn btn-outline-success" type="submit" href="/admin/login/?next=/admin/">
+                    <i class="fa fa-gear" style="font-size:24px;"></i>
+                    Configuracion</a>
+            {% endif %}
         </form>
     </div>
 </nav>
